# chicken-pi

./: .gitignore  README.md  chicken-pi.cabal  flake.nix  pi-forall.cabal  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
pi/Data/: Bool.pi  Fin.pi  Fun.pi  HList.pi  List.pi  Maybe.pi  Nat.pi  Pos.pi  Sigma.pi  SumBool.pi  Unit.pi  Vect.pi  Void.pi
pi/Examples/: Contra.pi  Lambda.pi  PHOAS.pi
pi/Logic/: Classical.pi  Eq.pi  Logic.pi
pi/Universes/: Subsingleton.pi
pi/WIP/: Fin.pi  List.pi  Sigma.pi  Vect.pi  Void.pi
src/: Arbitrary.hs  Environment.hs  Equal.hs  Main.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
test/: Main.hs
test/Data/: ContraNeg.pi  ContraPos.pi  DefinesOtherType.pi  Dependent.pi  InnerContra.pi  MultiParams.pi  NotFullyApplied.pi  SigmaNotations.pi
test/Failing/: DependentWildcardConfusion.pi  InvalidPattern1.pi  InvalidPattern2.pi  NonExhaustive.pi  UnorderedPatterns.pi  WildcardVar.pi
test/Fix/: Constant.pi  NonRecursiveComponent.pi  Straight.pi
test/Matching/: Eval.pi  Subst.pi  Wildcard.pi  WrongInName.pi
test/Positivity/: ArgOfArg.pi  ParamNotIndex.pi  SelfNonUniform.pi
test/Universes/: Hierarchy.pi  InvalidHierarchy1.pi  InvalidHierarchy2.pi  PolymorphicIdentity.pi  ProofErasability.pi  PropElim.pi  SetNotImpred.pi  SingletonElim.pi  Subsingleton.pi  SubsingletonElim.pi
