cabal-Version: 2.2
name: chicken-pi
version: 0.1
license: MIT
license-file: LICENSE
copyright: (c) 2013-2024 University of Pennsylvania
description: A toy proof assistant based on pi-forall and Coq
author: Noe De Santo <ndesanto@seas.upenn.edu>, Tanner Duve <tannerduve@gmail.com>, based on pi-forall by Stephanie Weirich <sweirich@seas.upenn.edu>
maintainer: Stephanie Weirich <sweirich@seas.upenn.edu>
build-type: Simple
tested-with: GHC == 9.4.8
category: Compilers/Interpreters
homepage: https://github.com/Ef55/chicken-pi
synopsis: Demo implementation of typechecker for dependently-typed language

source-repository head
  type: git
  location: https://github.com/Ef55/chicken-pi

common shared-properties
  default-language:
    GHC2021
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds -fno-warn-unused-imports -fno-warn-name-shadowing -Wno-unrecognised-pragmas
  default-extensions: 
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies 
     
  build-depends:  
    base >= 4 && < 5,
    parsec >= 3.1.8 && < 3.2,
    mtl >= 2.2.1,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.4.4,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    containers,
    directory,
    filepath,
    HUnit,
    QuickCheck,
    tasty, tasty-hunit, tasty-quickcheck,
    regex-compat
  if !impl(ghc >= 8.0)
    build-depends: semigroups       
 

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules: 
    Environment
    Equal
    LayoutToken
    Modules
    Parser
    PrettyPrint
    Syntax
    TypeCheck
    Arbitrary
  
executable chicken-pi
  import: shared-properties
  build-depends: chicken-pi
  hs-source-dirs: app
  main-is: Main.hs

test-suite test-chicken-pi
  import: shared-properties
  build-depends: chicken-pi
    , QuickCheck >= 2.13.2
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
